--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependency-checker": "git+https://github.com/zenefits/dependency-checker#v0.0.2",
     "npmlog": "^1.2.1",
     "redis": "^0.12.1",
-    "testem": "git+https://github.com/zenefits/testem#v1.6.0-zenefits.2"
+    "cypress": "^5.6.0",
+    "cypress-file-upload": "^4.0.7"
   },
   "repository": {
     "type": "git",
